refactor: replace deprecated methods and improve code readability